--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: fake-perfect-api
     env: python
     plan: free
-    pythonVersion: 3.11
+    pythonVersion: "3.11.6"
     buildCommand: pip install --no-cache-dir -r requirements.txt
     startCommand: uvicorn perfectapi.app:app --host 0.0.0.0 --port $PORT
     autoDeploy: true
