--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,13 @@
 services:
   - type: web
+    runtime: python
     name: fake-perfect-api
-    env: python
     plan: free
-    pythonVersion: "3.11.6"
+    branch: main
     buildCommand: pip install --no-cache-dir -r requirements.txt
     startCommand: uvicorn perfectapi.app:app --host 0.0.0.0 --port $PORT
-    autoDeploy: true
     healthCheckPath: /docs
+    autoDeploy: true
+    envVars:
+      - key: PYTHON_VERSION
+        value: "3.11"
