--- a/render.yaml
+++ b/render.yaml
@@ -1,13 +1,11 @@
 services:
   - type: web
-    runtime: python
     name: fake-perfect-api
+    env: python
     plan: free
     branch: main
     buildCommand: pip install --no-cache-dir -r requirements.txt
     startCommand: uvicorn perfectapi.app:app --host 0.0.0.0 --port $PORT
     healthCheckPath: /docs
     autoDeploy: true
-    envVars:
-      - key: PYTHON_VERSION
-        value: "3.11"
+    pythonVersion: "3.11"
