Replace legacy API with contract-complete FastAPI app

--- a/schemathesis.toml
+++ b/schemathesis.toml
@@ -1,3 +1,5 @@
 [phases.coverage]
-# Limit “unexpected method” tests to none (disables TRACE/PUT/DELETE etc. that aren't in your spec)
 unexpected-methods = []
+
+[generation]
+allow-x00 = false
